		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance
		Attendance: added count column to Students Not Present and Students Not Onsite reports
		Attendance: granted like to those students who successfully self register
		Attendance: added selective auto-redirect to move students to self-registration page under certain conditions
		Behaviour: fixed typo in three settings
		Departments: fixed bug preventing students from seeing other students in a class
		Finance: set name of outgoing email to school name, not user's name
		Individual Needs: added ability to record educational assistants for a student
		Library: added Optical Media as item type
		Library: added replacement fields to import
		Messenger: fixed multibyte substring issue in homepage widget
		Planner: updated attendance to only hide the reason and comment fields if Present is the default attendance
		Roll Groups: fixed bug preventing alerts from showing
		Rubrics: reduced wait time on rubric load for schools with lots of rubric data
		School Admin: updated Manage School Years to prevent removing or unsetting the current School Year
        School Admin: added an Assign Houses tool to bulk assign students to houses by Year Group
		Students: fixed School History section in Student Profile to exclude upcoming years
		Students: fixed Application Form for logged in users not selecting a family by default (if one exists)
		Students: fixed interface string issue in student details screen
		Students: fixed display of Other Fields heading for parents in Application Form
        Students: added a notification event for Application Form Accepted
        Students: added an option for logged-in users to link new Application Forms to an existing user or family
		Students: added ability to delete files and upload multiple files in Edit Application Form
		System Admin: increased length of Absolute URL and Absolute Path to 100 characters